@@ -10,13 +10,13 @@ use Test::NoWarnings;
 # Test.
 my $obj = Tags::Output::Raw->new;
 $obj->put(
-	['b', 'tag'],
+	['b', 'element'],
 	['d', 'a<a', 'a>a', 'a&a'],
-	['e', 'tag'],
+	['e', 'element'],
 );
 my $ret = $obj->flush;
 my $right_ret = <<'END';
-<tag>a&lt;aa>aa&amp;a</tag>
+<element>a&lt;aa>aa&amp;a</element>
 END
 chomp $right_ret;
 is($ret, $right_ret);
@@ -35,15 +35,15 @@ $obj = Tags::Output::Raw->new(
 	'raw_callback' => $sub,
 );
 $obj->put(
-	['b', 'tag'],
+	['b', 'element'],
 	['d', 'nan', 'ana'],
 	['cd', 'nan'],
-	['e', 'tag'],
+	['e', 'element'],
 	['r', 'ananas'],
 );
 $ret = $obj->flush;
 $right_ret = <<'END';
-<tag>n.n.n.<![CDATA[n.n]]></tag>.n.n.s
+<element>n.n.n.<![CDATA[n.n]]></element>.n.n.s
 END
 chomp $right_ret;
 is($ret, $right_ret);
